# FastGrubbsTest

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  Timing_grubbs.py  example.py  generate_timing_data.py  pyproject.toml  setup.py  test_jackknife.py
.github/workflows/: publish.yml
GrubbsTest/: IterativeJackKnife  main.cpp  mainFunctions.c  mainFunctions.cpp  mainFunctions.h  mainFunctions.hpp  tFunction.py
IterativeJackKnife/: Makefile  __init__.py  main.cpp  mainFunctions.c  mainFunctions.h
Timing/: data100k.txt  data10k.txt  data1k.txt
grubbstest/: __init__.py  main.cpp
helperfuncs/: mainFunctions.cpp
src/GrubbsTest/: __init__.py  main.cpp
tests/: CMakeLists.txt  test_GrubbsCalculations.py  test_GrubbsIO.py
