[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "wheel",
    "setuptools>=42",
    "cmake>=3.18",
    "ninja",
    "pybind11>=2.13.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "GrubbsTest"
version = "0.0.1"
description = "A python packege to perform Grubbs test quickly" 
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "David Olejniczak", email = "david.olejniczak@icloud.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Statistics"
]
dependencies = ["pybind11>=2.6.0"]

[project.urls]
Homepage = "https://github.com/davidolejniczak/IterativeJackKnife"
"Bug Tracker" = "https://github.com/davidolejniczak/IterativeJackKnife/issues"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.build-type = "Release"
cmake.verbose = true
minimum-version = "0.4.0"

install.components = ["python"]
wheel.packages = ["GrubbsTest"]

[tool.scikit-build.cmake.define]
USE_PYTHON_INCLUDE_DIR = "ON"

CMAKE_CXX_STANDARD = "11"