[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "nanobind>=2.0.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "grubbstest"
version = "2.0.0"
description = "Fast Grubbs' test implementation with C++ bindings." 
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "David Olejniczak", email = "david.olejniczak@icloud.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/davidolejniczak/FastGrubbsTest"
"Bug Tracker" = "https://github.com/davidolejniczak/FastGrubbsTest/issues"

[tool.scikit-build]
wheel.packages = ["grubbstest"]
